--- a/settings.json
+++ b/settings.json
@@ -14,8 +14,8 @@
         "icon": "",
         "default_size": [840, 320],
         "minimum_size": [840, 320],
-        "maximum_size": [840, 320],
-        "disable_maximize_button": true,
+        "maximum_size": [0, 0],
+        "disable_maximize_button": false,
         "center_on_screen": true,
         "start_maximized": false,
         "start_fullscreen": false,
