Alteração na consulta da view de produto, alteração do btn sincronizar para envio da requisação via ajax.

--- a/settings.json
+++ b/settings.json
@@ -15,7 +15,7 @@
         "default_size": [840, 320],
         "minimum_size": [840, 320],
         "maximum_size": [0, 0],
-        "disable_maximize_button": false,
+        "disable_maximize_button": true,
         "center_on_screen": true,
         "start_maximized": false,
         "start_fullscreen": false,
@@ -43,20 +43,20 @@
         "log_file": "debug.log",
         "log_severity": "default",
         "cache_path": "webcache",
-        "external_drag": true,
-        "external_navigation": true,
-        "reload_page_F5": true,
-        "devtools_F12": true,
+        "external_drag": false,
+        "external_navigation": false,
+        "reload_page_F5": false,
+        "devtools_F12": false,
         "remote_debugging_port": 0,
         "command_line_switches": {},
         "enable_downloads": true,
         "context_menu": {
-            "enable_menu": true,
-            "navigation": true,
-            "print": true,
-            "view_source": true,
-            "open_in_external_browser": true,
-            "devtools": true
+            "enable_menu": false,
+            "navigation": false,
+            "print": false,
+            "view_source": false,
+            "open_in_external_browser": false,
+            "devtools": false
         }
     }
 }
