--- a/settings.json
+++ b/settings.json
@@ -14,7 +14,7 @@
         "icon": "",
         "default_size": [840, 320],
         "minimum_size": [840, 320],
-        "maximum_size": [0, 0],
+        "maximum_size": [840, 320],
         "disable_maximize_button": true,
         "center_on_screen": true,
         "start_maximized": false,
@@ -44,12 +44,12 @@
         "log_severity": "default",
         "cache_path": "webcache",
         "external_drag": false,
-        "external_navigation": false,
-        "reload_page_F5": false,
-        "devtools_F12": false,
+        "external_navigation": true,
+        "reload_page_F5": true,
+        "devtools_F12": true,
         "remote_debugging_port": 0,
         "command_line_switches": {},
-        "enable_downloads": true,
+        "enable_downloads": false,
         "context_menu": {
             "enable_menu": false,
             "navigation": false,
